# SJTU

./: .gitmodules  README.md
NIS1336/: .gitignore
NIS1336/hw1/: .gitignore  Makefile  README.md  helps  prog1.c  prog1.cc  prog2.c  prog2.cc  utils.c  utils.h
NIS1336/hw3/: .gitignore  CMakeLists.txt  Makefile  main.cc  row.cc  row.h
NIS1336/lesson2/: README.md  exc2.c
NIS2331/lab/: .gitignore  Makefile  README.md  grade.py  main.c  mm.s
工程实践与科技创新I/: BOOTSTRAP.md  example.cpp  experiment2.ino
工程实践与科技创新I/3D/: 1.SLDPRT  2.SLDPRT  3.SLDPRT  4.SLDPRT  README.md
工程实践与科技创新I/Exam/: Exam.ino  button.hpp  clock.hpp
工程实践与科技创新I/Exp2/: Exp2.ino  button.hpp  clock.cpp  clock.hpp  led.hpp
工程实践与科技创新I/Lab0/Blink/: Blink.ino
工程实践与科技创新I/Lab0/exercise1/: exercise1.ino
工程实践与科技创新I/Lab0/exercise2/: exercise2.ino
工程实践与科技创新I/Lab0/exercise3/: exercise3.ino
工程实践与科技创新I/Lab2/: README.md
工程实践与科技创新I/Lab4/: README.md
工程实践与科技创新I/Lesson4/: HX711.cpp
工程实践与科技创新I/libs/: led.hpp
工程实践与科技创新I/timer/: Timer.cpp  Timer.h
工程实践与科技创新I/线切割/: rikka.3b  rikka.exb
数学建模/python/: Chapter1.ipynb  Chapter2.ipynb  Chapter3.ipynb  Chapter4.ipynb  Chapter5.ipynb  Chapter6.ipynb  Chatper5.ipynb  Chatper6.ipynb  README.md
数据结构/: README.md
数据结构/acmoj/: .gitignore  README.md  notes.md
数据结构/structures/: Cargo.toml  README.md
数据结构/structures/benches/: benchmark.rs
数据结构/structures/examples/: bench.rs
数据结构/structures/src/: binary_tree.rs  heap.rs  lib.rs  search.rs  utils.rs
数据结构/touge/: fast_read.cpp
编程周赛/: 3-1.cc  3-2.cc  3-3.cc  3-4.cc  4-1.cc  4-2.cc  4-3.cc  T552844.cc
(+190 files in other folders)
