[package]
name = "structures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8"
criterion = "0.4"

[profile.bench]
opt-level = 3
debug = true

[[bench]]
name = "benchmark"
harness = false